--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   /*height: 712px; não precisa colocar altura pois ela acompanha a página
   border: 1px solid red;
   margin-right: auto;
